<resources>
    <string name="app_name">NorteAgroApp</string>
    <string name="msgUsuario">Digite Usuario</string>
    <string name="msgClave">Digite la Clave</string>
    <string name="butIniciar">Entrar</string>
    <string name="texNoUsuario">No tiene Usuario,</string>
    <string name="texCrearUsuario">Crear aquí</string>
    <string name="texNoClave">No tiene clave, </string>
    <string name="texRecuperar">Recuperar aquí</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_tiendas">Tiendas</string>
    <string name="text_mis_tiendas">Mis Tiendas</string>
    <string name="text_productos">Productos</string>
    <string name="content_description_media">imagen tienda</string>
    <string name="msgNombreTienda">Nombre Tienda</string>
    <string name="msgNombreDescripcion">Descripción</string>
    <string name="msgTelefonoTienda">Telefono</string>
    <string name="butGuardar">Guardar</string>
</resources>