<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".vista.RegistrarTiendaActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/msgNombreTienda">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nombre_tienda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/msgNombreDescripcion">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/descripcion_tienda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/msgTelefonoTienda">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/telefono_tienda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/butGuardar"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />
</LinearLayout>